# cookiecutter-python

./: cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.rst  mypy.ini  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/tests/: __init__.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
