[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"

[tool.coverage.run]
branch = true
omit = ["tests/*",]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
black = ">=21.10b0"
flake8 = ">=4.0.1"
flake8-docstrings = ">=1.6.0"
flake8-pyi = ">=22.8.0"
isort = ">=5.10.0"
mypy = ">=0.910"
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
coveralls = ">=3.3.0"
Sphinx = ">=4.2.0"
sphinx-rtd-theme = ">=1.0.0"
changelog-cli = ">=0.7.1"
bump2version = ">=1.0.1"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
