[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["Luke Shiner <luke@lukeshiner.com>"]
license = "MIT"
readme = "README.rst"

[tool.coverage.run]
branch = true
omit = ["tests/*",]

[tool.poetry.dependencies]
python = ">={{cookiecutter.python_version}}"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
flake8 = ">=7.1.1"
flake8-docstrings = ">=1.7.0"
isort = ">=5.13.2"
mypy = ">=1.12.0"
pytest = ">=8.3.3"
pytest-cov = ">=5.0.0"
sphinx = ">=8.1.3"
sphinx-rtd-theme = ">=3.0.1"
changelog-cli = ">=0.7.1"
bump2version = ">=1.0.1"
flake8-pyi = ">=24.9.0"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
